# gg-scrape

./: .gitignore  CHANGELOG.md  Pipfile  README.md  ggs.py  ggscrape.py  pyproject.toml
gg_scrape/: __init__.py  __main__.py  argsparse.py  champion_gg_scraper.py  lolalytics_scraper.py  main.py  mobalytics_gg_scraper.py  mobalytics_scraper.py  print_tree.py  vanilla_scraper.py
tests/: test_gg_scrape.py
