[tool.poetry]
name = "gg-scrape"
description = "A little Python CLI app that provides a summary of League champion build information. "
authors = ["Alex W <alex@southsun.tech>"]
version = "0.1.4"
readme = "README.md"
repository = "https://github.com/teauxfu/gg-scrape"

[tool.poetry.dependencies]
python = "^3.9"

anytree = "^2.8.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
typer = "^0.3.2"


[tool.poetry.scripts]
ggs = "gg_scrape.argsparse:ggs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
